exclude eunit-testfwk project